Ibid, fix to the press module spacing

--- a/wp-content/themes/standard-industries/styles/modules/_press.scss
+++ b/wp-content/themes/standard-industries/styles/modules/_press.scss
@@ -80,7 +80,7 @@
     width: 100%;
 
     @include large-and-up {
-      justify-content: space-between;
+      justify-content: center;
     }
 
     &-item {
